# mini-redis-grpc

./: Dockerfile  justfile  pyproject.toml
.github/workflows/: deploy.yml
src/: server.py
src/config/: config.py
src/services/: service.py
