[project]
name = "itka"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.13",
]

[dependency-groups]
dev = [
    "mypy-protobuf>=5.1.0",
]

[tool.ruff]
extend-exclude = ["src/generated"]

[tool.ruff.format]
exclude = ["src/generated"]
